--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,6 @@
 #FC := mpifort -fopenmp -g -fcheck=array-temps,bounds,do,mem,pointer,recursion
-FC := mpifort -g -fbounds-check
+FC := ftn -fopenmp -O2 -march=haswell -ffast-math -funroll-loops
+#FC := mpifort -g -fbounds-check
 #FC := mpifort -fopenmp -O3 -ffast-math -funroll-loops -mtune=native
 
 OBJDIR := obj
