--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,7 +9,8 @@ version: 1
 sphinx:
   configuration: docs/source/conf.py
 
-formats: html
+formats:
+    - html
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
